<resources>
    <string name="app_name">Simple Music Player</string>
    <string name="song_text_view">SONGS LIST</string>
    <string name="action_settings">Settings</string>
    <string name="now_playing_text">Now Playing</string>
    <string name="album_art_decription">Album Art</string>
    <string name="initial_time">00:00</string>
    <string name="previous_song_button_description">Previous Song</string>
    <string name="play_pause_button_description">Play or Pause</string>
    <string name="next_song_button_description">Next Song</string>
</resources>
